# Shipping-FusionAI

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  ENTERPRISE_DEPLOYMENT.md  ENTERPRISE_DEPLOYMENT_GUIDE.md  ENTERPRISE_FEATURES_SUMMARY.md  GITHUB_STARS_STRATEGY_SUMMARY.md  LICENSE  LICENSE_AND_PROPERTIES_UPDATE.md  MANIFEST.in  MARITIME_COMMUNITY_STRATEGY.md  README.md  RELEASE_v1.0.0.md  WIKI_STRUCTURE.md  WIKI_STRUCTURE_FINAL.md  WIKI_STRUCTURE_PART2.md  WIKI_STRUCTURE_PART3.md  app.py  pyproject.toml  requirements.txt  sample_data.py  setup.py  validate_enterprise_features.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  integration_request.md  maritime_discussion.md
.github/workflows/: community-engagement.yml  release.yml
data/: vessel_maintenance.db
frontend/: README.md  index.html
frontend/css/: components.css  main.css  responsive.css
frontend/js/: api.js  charts.js  components.js  main.js
src/: __init__.py  ai_processor.py  analytics.py  audit.py  auth.py  config.py  database.py  models.py  monitoring.py  notifications.py  rate_limiter.py  rate_limiting.py  simple_config.py  simple_models.py  tenancy.py  tenant.py
templates/: index.html
